--- a/index.html
+++ b/index.html
@@ -19,46 +19,47 @@
          referrerpolicy="no-referrer"
       />
       <link rel="stylesheet" href="./css/styles.css" />
+      <link rel="stylesheet" href="./css/main.min.css" />
    </head>
    <body>
       <!-- header -->
-      <header class="page-header">
-         <div class="container">
-            <nav class="nav">
+      <header class="header">
+         <div class="container header__container">
+            <nav class="navigation">
                <a href="./index.html" class="logo link">
                   <span>Web</span>Studio
                </a>
-               <ul class="nav-list list">
-                  <li class="nav-item">
-                     <a href="./index.html" class="nav-link link current"
+               <ul class="menu list">
+                  <li class="menu__item">
+                     <a href="./index.html" class="menu__link link current"
                         >Студія</a
                      >
                   </li>
-                  <li class="nav-item">
-                     <a href="./portfolio.html" class="nav-link link"
+                  <li class="menu__item">
+                     <a href="./portfolio.html" class="menu__link link"
                         >Портфоліо</a
                      >
                   </li>
-                  <li class="nav-item">
-                     <a href="#" class="nav-link link">Контакти</a>
+                  <li class="menu__item">
+                     <a href="#" class="menu__link link">Контакти</a>
                   </li>
                </ul>
             </nav>
-            <ul class="header-contacts-list list">
-               <li class="header-contacts-item">
+            <ul class="connect header__connect list">
+               <li class="connect__item">
                   <a
                      href="mailto:info@devstudio.com"
-                     class="header-contacts-link link"
+                     class="connect__link link"
                   >
-                     <svg width="16px" height="12px" class="contacts-icon">
+                     <svg width="16px" height="12px" class="connect__icon">
                         <use href="./images/icons.svg#icon-envelope"></use>
                      </svg>
                      info@devstudio.com</a
                   >
                </li>
-               <li class="header-contacts-item">
-                  <a href="tel:+380961111111" class="header-contacts-link link"
-                     ><svg width="10px" height="16px" class="contacts-icon">
+               <li class="connect__item">
+                  <a href="tel:+380961111111" class="connect__link link"
+                     ><svg width="10px" height="16px" class="connect__icon">
                         <use
                            href="./images/icons.svg#icon-smartphone"
                         ></use></svg
@@ -72,8 +73,8 @@
       <main>
          <!-- hero -->
          <section class="section hero">
-            <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-            <button type="button" class="hero-button btn" data-modal-open>
+            <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
+            <button type="button" class="hero__button btn" data-modal-open>
                Замовити послугу
             </button>
          </section>
@@ -199,46 +200,46 @@
                      <div class="team-card-text">
                         <h3 class="team-card-title title">Ігор Дем'яненко</h3>
                         <p lang="en">Product Designer</p>
-                        <ul class="team-social-list list">
-                           <li class="team-social-item">
+                        <ul class="soc-list list">
+                           <li class=".soc-item">
                               <a
                                  href="#"
                                  rel="noopener nofollow noreferrer"
-                                 class="team-social-link link"
-                                 ><svg class="team-social-icon">
+                                 class="team__soc-link soc-link link"
+                                 ><svg class="soc-icon">
                                     <use
                                        href="./images/icons.svg#icon-instagram"
                                     ></use></svg
                               ></a>
                            </li>
-                           <li class="team-social-item">
+                           <li class="soc-item">
                               <a
                                  href="#"
                                  rel="noopener nofollow noreferrer"
-                                 class="team-social-link link"
-                                 ><svg class="team-social-icon">
+                                 class="team__soc-link soc-link link"
+                                 ><svg class="soc-icon">
                                     <use
                                        href="./images/icons.svg#icon-twitter"
                                     ></use></svg
                               ></a>
                            </li>
-                           <li class="team-social-item">
+                           <li class="soc-item">
                               <a
                                  href="#"
                                  rel="noopener nofollow noreferrer"
-                                 class="team-social-link link"
-                                 ><svg class="team-social-icon">
+                                 class="team__soc-link soc-link link"
+                                 ><svg class="soc-icon">
                                     <use
                                        href="./images/icons.svg#icon-facebook"
                                     ></use></svg
                               ></a>
                            </li>
-                           <li class="team-social-item">
+                           <li class="soc-item">
                               <a
                                  href="#"
                                  rel="noopener nofollow noreferrer"
-                                 class="team-social-link link"
-                                 ><svg class="team-social-icon">
+                                 class="team__soc-link soc-link link"
+                                 ><svg class="soc-icon">
                                     <use
                                        href="./images/icons.svg#icon-linkedin"
                                     ></use></svg
@@ -256,46 +257,46 @@
                      <div class="team-card-text">
                         <h3 class="team-card-title title">Ольга Рєпіна</h3>
                         <p lang="en">Frontend Developer</p>
-                        <ul class="team-social-list list">
-                           <li class="team-social-item">
+                        <ul class="soc-list list">
+                           <li class="soc-item">
                               <a
                                  href="#"
                                  rel="noopener nofollow noreferrer"
-                                 class="team-social-link link"
-                                 ><svg class="team-social-icon">
+                                 class="team__soc-link soc-link link"
+                                 ><svg class="soc-icon">
                                     <use
                                        href="./images/icons.svg#icon-instagram"
                                     ></use></svg
                               ></a>
                            </li>
-                           <li class="team-social-item">
+                           <li class="soc-item">
                               <a
                                  href="#"
                                  rel="noopener nofollow noreferrer"
-                                 class="team-social-link link"
-                                 ><svg class="team-social-icon">
+                                 class="team__soc-link soc-link link"
+                                 ><svg class="soc-icon">
                                     <use
                                        href="./images/icons.svg#icon-twitter"
                                     ></use></svg
                               ></a>
                            </li>
-                           <li class="team-social-item">
+                           <li class="soc-item">
                               <a
                                  href="#"
                                  rel="noopener nofollow noreferrer"
-                                 class="team-social-link link"
-                                 ><svg class="team-social-icon">
+                                 class="team__soc-link soc-link link"
+                                 ><svg class="soc-icon">
                                     <use
                                        href="./images/icons.svg#icon-facebook"
                                     ></use></svg
                               ></a>
                            </li>
-                           <li class="team-social-item">
+                           <li class="soc-item">
                               <a
                                  href="#"
                                  rel="noopener nofollow noreferrer"
-                                 class="team-social-link link"
-                                 ><svg class="team-social-icon">
+                                 class="team__soc-link soc-link link"
+                                 ><svg class="soc-icon">
                                     <use
                                        href="./images/icons.svg#icon-linkedin"
                                     ></use></svg
@@ -313,46 +314,46 @@
                      <div class="team-card-text">
                         <h3 class="team-card-title title">Микола Тарасов</h3>
                         <p lang="en">Marketing</p>
-                        <ul class="team-social-list list">
-                           <li class="team-social-item">
+                        <ul class="soc-list list">
+                           <li class="soc-item">
                               <a
                                  href="#"
                                  rel="noopener nofollow noreferrer"
-                                 class="team-social-link link"
-                                 ><svg class="team-social-icon">
+                                 class="team__soc-link soc-link link"
+                                 ><svg class="soc-icon">
                                     <use
                                        href="./images/icons.svg#icon-instagram"
                                     ></use></svg
                               ></a>
                            </li>
-                           <li class="team-social-item">
+                           <li class="soc-item">
                               <a
                                  href="#"
                                  rel="noopener nofollow noreferrer"
-                                 class="team-social-link link"
-                                 ><svg class="team-social-icon">
+                                 class="team__soc-link soc-link link"
+                                 ><svg class="soc-icon">
                                     <use
                                        href="./images/icons.svg#icon-twitter"
                                     ></use></svg
                               ></a>
                            </li>
-                           <li class="team-social-item">
+                           <li class="soc-item">
                               <a
                                  href="#"
                                  rel="noopener nofollow noreferrer"
-                                 class="team-social-link link"
-                                 ><svg class="team-social-icon">
+                                 class="team__soc-link soc-link link"
+                                 ><svg class="soc-icon">
                                     <use
                                        href="./images/icons.svg#icon-facebook"
                                     ></use></svg
                               ></a>
                            </li>
-                           <li class="team-social-item">
+                           <li class="soc-item">
                               <a
                                  href="#"
                                  rel="noopener nofollow noreferrer"
-                                 class="team-social-link link"
-                                 ><svg class="team-social-icon">
+                                 class="team__soc-link soc-link link"
+                                 ><svg class="soc-icon">
                                     <use
                                        href="./images/icons.svg#icon-linkedin"
                                     ></use></svg
@@ -370,46 +371,46 @@
                      <div class="team-card-text">
                         <h3 class="team-card-title title">Михайло Єрмаков</h3>
                         <p lang="en">UI Designer</p>
-                        <ul class="team-social-list list">
-                           <li class="team-social-item">
+                        <ul class="soc-list list">
+                           <li class="soc-item">
                               <a
                                  href="#"
                                  rel="noopener nofollow noreferrer"
-                                 class="team-social-link link"
-                                 ><svg class="team-social-icon">
+                                 class="team__soc-link soc-link link"
+                                 ><svg class="soc-icon">
                                     <use
                                        href="./images/icons.svg#icon-instagram"
                                     ></use></svg
                               ></a>
                            </li>
-                           <li class="team-social-item">
+                           <li class="soc-item">
                               <a
                                  href="#"
                                  rel="noopener nofollow noreferrer"
-                                 class="team-social-link link"
-                                 ><svg class="team-social-icon">
+                                 class="team__soc-link soc-link link"
+                                 ><svg class="soc-icon">
                                     <use
                                        href="./images/icons.svg#icon-twitter"
                                     ></use></svg
                               ></a>
                            </li>
-                           <li class="team-social-item">
+                           <li class="soc-item">
                               <a
                                  href="#"
                                  rel="noopener nofollow noreferrer"
-                                 class="team-social-link link"
-                                 ><svg class="team-social-icon">
+                                 class="team__soc-link soc-link link"
+                                 ><svg class="soc-icon">
                                     <use
                                        href="./images/icons.svg#icon-facebook"
                                     ></use></svg
                               ></a>
                            </li>
-                           <li class="team-social-item">
+                           <li class="soc-item">
                               <a
                                  href="#"
                                  rel="noopener nofollow noreferrer"
-                                 class="team-social-link link"
-                                 ><svg class="team-social-icon">
+                                 class="team__soc-link soc-link link"
+                                 ><svg class="soc-icon">
                                     <use
                                        href="./images/icons.svg#icon-linkedin"
                                     ></use></svg
@@ -536,46 +537,46 @@
                <p class="footer-motivation">Приєднуйтесь</p>
                <p></p>
                <div class="footer-social">
-                  <ul class="footer-social-list list">
-                     <li class="footer-social-item">
+                  <ul class="soc-list list">
+                     <li class="soc-item">
                         <a
                            href="#"
                            rel="noopener nofollow noreferrer"
-                           class="footer-social-link link"
-                           ><svg class="footer-social-icon">
+                           class="footer__soc-link soc-link link"
+                           ><svg class="soc-icon">
                               <use
                                  href="./images/icons.svg#icon-instagram"
                               ></use></svg
                         ></a>
                      </li>
-                     <li class="footer-social-item">
+                     <li class="soc-item">
                         <a
                            href="#"
                            rel="noopener nofollow noreferrer"
-                           class="footer-social-link link"
-                           ><svg class="footer-social-icon">
+                           class="footer__soc-link soc-link link"
+                           ><svg class="soc-icon">
                               <use
                                  href="./images/icons.svg#icon-twitter"
                               ></use></svg
                         ></a>
                      </li>
-                     <li class="footer-social-item">
+                     <li class="soc-item">
                         <a
                            href="#"
                            rel="noopener nofollow noreferrer"
-                           class="footer-social-link link"
-                           ><svg class="footer-social-icon">
+                           class="footer__soc-link soc-link link"
+                           ><svg class="soc-icon">
                               <use
                                  href="./images/icons.svg#icon-facebook"
                               ></use></svg
                         ></a>
                      </li>
-                     <li class="footer-social-item">
+                     <li class="soc-item">
                         <a
                            href="#"
                            rel="noopener nofollow noreferrer"
-                           class="footer-social-link link"
-                           ><svg class="footer-social-icon">
+                           class="footer__soc-link soc-link link"
+                           ><svg class="soc-icon">
                               <use
                                  href="./images/icons.svg#icon-linkedin"
                               ></use></svg
