--- a/portfolio.html
+++ b/portfolio.html
@@ -19,43 +19,45 @@
          referrerpolicy="no-referrer"
       />
       <link rel="stylesheet" href="./css/styles.css" />
+      <link rel="stylesheet" href="./css/main.min.css" />
    </head>
    <body>
-      <header class="page-header">
-         <div class="container">
-            <nav class="nav">
+      <!-- header -->
+      <header class="header">
+         <div class="container header__container">
+            <nav class="navigation">
                <a href="./index.html" class="logo link">
                   <span>Web</span>Studio
                </a>
-               <ul class="nav-list list">
-                  <li class="nav-item">
-                     <a href="./index.html" class="nav-link link">Студія</a>
+               <ul class="menu list">
+                  <li class="menu__item">
+                     <a href="./index.html" class="menu__link link">Студія</a>
                   </li>
-                  <li class="nav-item">
-                     <a href="./portfolio.html" class="nav-link link current"
+                  <li class="menu__item">
+                     <a href="./portfolio.html" class="menu__link link current"
                         >Портфоліо</a
                      >
                   </li>
-                  <li class="nav-item">
-                     <a href="#" class="nav-link link">Контакти</a>
+                  <li class="menu__item">
+                     <a href="#" class="menu__link link">Контакти</a>
                   </li>
                </ul>
             </nav>
-            <ul class="header-contacts-list list">
-               <li class="header-contacts-item">
+            <ul class="connect header__connect list">
+               <li class="connect__item">
                   <a
                      href="mailto:info@devstudio.com"
-                     class="header-contacts-link link"
+                     class="connect__link link"
                   >
-                     <svg width="16px" height="12px" class="contacts-icon">
+                     <svg width="16px" height="12px" class="connect__icon">
                         <use href="./images/icons.svg#icon-envelope"></use>
                      </svg>
                      info@devstudio.com</a
                   >
                </li>
-               <li class="header-contacts-item">
-                  <a href="tel:+380961111111" class="header-contacts-link link"
-                     ><svg width="10px" height="16px" class="contacts-icon">
+               <li class="connect__item">
+                  <a href="tel:+380961111111" class="connect__link link"
+                     ><svg width="10px" height="16px" class="connect__icon">
                         <use
                            href="./images/icons.svg#icon-smartphone"
                         ></use></svg
@@ -72,14 +74,26 @@
                <h1 class="visually-hidden">Приклади робіт</h1>
                <!--filters-->
                <ul class="filter-list list">
-                  <li><button type="button" class="button">Усі</button></li>
                   <li>
-                     <button type="button" class="button">Веб-сайти</button>
+                     <button type="button" class="filter-button">Усі</button>
                   </li>
-                  <li><button type="button" class="button">Додатки</button></li>
-                  <li><button type="button" class="button">Дизайн</button></li>
                   <li>
-                     <button type="button" class="button">Маркетинг</button>
+                     <button type="button" class="filter-button">
+                        Веб-сайти
+                     </button>
+                  </li>
+                  <li>
+                     <button type="button" class="filter-button">
+                        Додатки
+                     </button>
+                  </li>
+                  <li>
+                     <button type="button" class="filter-button">Дизайн</button>
+                  </li>
+                  <li>
+                     <button type="button" class="filter-button">
+                        Маркетинг
+                     </button>
                   </li>
                </ul>
                <ul class="example-list list">
